--- a/.github/workflows/helm-upload.yml
+++ b/.github/workflows/helm-upload.yml
@@ -29,7 +29,9 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
+      - name: debug
+        run: |
+          ls -la -R
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
