--- a/.github/workflows/helm-upload.yml
+++ b/.github/workflows/helm-upload.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
-          charts_dir: helm/thingsboard
+          charts_dir: ./helm/thingsboard
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
