--- a/.github/workflows/helm-upload.yml
+++ b/.github/workflows/helm-upload.yml
@@ -36,6 +36,10 @@ jobs:
         uses: azure/setup-helm@v1
         with:
           version: v3.8.1
+      - name: Add Helm Repository
+        run: |
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo update
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
